--- a/.github/workflows/monitoramento.yml
+++ b/.github/workflows/monitoramento.yml
@@ -2,29 +2,28 @@ name: Monitoramento de Logs
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '*/15 * * * *'  # Executa a cada 15 minutos
 
 jobs:
-  build:
+  monitoramento:
     runs-on: ubuntu-latest
+
     steps:
       - name: Clonar repositório
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Configurar Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.10'
 
       - name: Instalar dependências
-        run: pip install -r requirements.txt || echo "Sem dependências extras"
+        run: pip install pandas
 
       - name: Executar script de monitoramento
         run: python monitor_logs.py
 
       - name: Salvar artefato
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: logs_csv
           path: eventos_seguranca.csv
